structure build dynamically and changed

--- a/amazon.html
+++ b/amazon.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="amazon.css">
 </head>
 <body>
-    <p class="para">good morning</p>
+    <div class="divbox">
+        <p class="para">Good Morning</p>
+    <p class="paratwo">Good Evening</p>
+    </div>
 </body>
 </html>
